# rust_de_crypto

./: .gitignore  README.md  affun.c  chash.c  siz.c
affine/src/: main.rs
base/: Cargo.toml
base/src/: main.rs
c/: ecole.c  ecole2.c  gf2fact.c  siz.c  sq.c
c/AES-GCM/: a.out
c/Serpent/: a.out
c/Serpent/Floppy1/: cbc_e_m  serpent-api.h.gch
c/aes/: a.out
c/chacha20/: a.out
c/crypto/RC6/: a.out  main.c
c/crypto/Serpent/: serpent-test
c/crypto/aes/: a.out  main.c
c/crypto/chacha20/: a.out  chacha20_example.c
c/crypto/twofish/: a.out  test.c
c/hash/blake2/: blake224  blake256  blake384  blake512
c/sha3/: Makefile  a.out
c/twofish/: test.c
csprng/: Cargo.toml
csprng/src/: main.rs
permute/: Cargo.toml
permute/src/: main.rs
sizer/: Cargo.toml
sizer/src/: kubo.rs  main.rs
sqiutal/: Cargo.toml
sqiutal/src/: main.rs
v2/: Cargo.toml  main.rs
v2/src/: M_dev.rs  aes.rs  arena.rs  bfo.rs  blake2.rs  blake3.rs  d_dev.rs  decode.rs  decode_stable.rs  e.rs  e_dev.rs  ecole2.c  encode.rs  encode_stable.rs  ga.rs  hash.rs  hmac.rs  main.rs  mine.rs  test.rs  xor128.rs
v2/src/mat/src/: main.rs
vec/src/: main.rs
vis/: Cargo.toml
vis/src/: main.rs
