[package]
name = "sizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.0.0"
base64 = "0.13.0"
big_num = "0.1.0"
ndarray = "0.15.4"
polynom = "0.1.1"
polynomial = "0.1.0"
quit = "1.1.4"
scanf = "1.2.1"
sscanf = "0.2.1"
