[package]
name = "v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = "0.4.3"
base64 = "0.13.0"
crypto = "0.3.0"
digest = "0.10.3"
hex = "0.4.3"
keccak = "0.1.2"
keccak-hash = "0.9.0"
ndarray = "0.15.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
sha3 = "0.10.1"

[[bin]]
name = "decode"
path="src/decode.rs"

[[bin]]
name = "encode"
path="src/encode.rs"

[[bin]]
name ="main"
path="src/main.rs"

[[bin]]
name="aaa"
path="src/hash.rs"

[[bin]]
name ="eee"
path="src/e.rs"

[[bin]]
name="ddd"
path="src/d.rs"
