[package]
name = "v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = "0.4.3"
aes = "0.8.1"
aes-gcm = "0.9.4"
base64 = "0.13.0"
blake2 = "0.10.4"
blake3 = "1.3.1"
chacha20 = "0.9.0"
crypto = "0.3.0"
digest = "0.10.3"
hex = "0.4.3"
hex-literal = "0.3.4"
hmac-sha = "0.6.1"
keccak = "0.1.2"
keccak-hash = "0.9.0"
ndarray = "0.15.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
serpent = "0.5.1"
sha3 = "0.10.1"
twofish = "0.7.1"

[[bin]]
name = "decode"
path="src/decode_stable.rs"

[[bin]]
name = "encode"
path="src/encode_stable.rs"

[[bin]]
name ="main"
path="src/main.rs"

[[bin]]
name="hash"
path="src/hash.rs"

[[bin]]
name ="eee"
path="src/E_dev.rs"

[[bin]]
name="ddd"
path="src/D_dev.rs"

[[bin]]
name="dev"
path="src/M_dev.rs"

[[bin]]
name="long"
path="src/longsize.rs"

[[bin]]
name="hmac"
path="src/hmac.rs"

[[bin]]
name="aes"
path="src/aes.rs"

[[bin]]
name="test"
path="src/mine.rs"

[[bin]]
name="xor"
path="src/xor128.rs"

[[bin]]
name="are"
path="src/arena.rs"

[[bin]]
name="blake"
path="src/blake2.rs"

[[bin]]
name="blake3"
path="src/blake3.rs"

[[bin]]
name="chacha"
path="src/chacha20.rs"

